--- a/app/templates/analysis/sentiment.html
+++ b/app/templates/analysis/sentiment.html
@@ -192,9 +192,7 @@
     </div>
 
     {% if correlation_id %}
-    <div class="alert alert-secondary small py-2">
-        <strong>Correlation ID:</strong> {{ correlation_id }}
-    </div>
+    <div class="alert alert-secondary small py-2">Correlation ID: {{ correlation_id }}</div>
     {% endif %}
 
     {% if sentiment_data %}
