--- a/app/templates/base_clean.html
+++ b/app/templates/base_clean.html
@@ -463,7 +463,7 @@
                                                     <li><a class="dropdown-item" href="{{ url_for('analysis.backtest') }}"><i class="fas fa-chart-line"></i> Backtest</a></li>
                                                     <li><a class="dropdown-item" href="{{ url_for('analysis.strategy_builder') }}"><i class="fas fa-tools"></i> Strategibygger</a></li>
                                                     <li><a class="dropdown-item" href="{{ url_for('analysis.tradingview') }}"><i class="fas fa-chart-line"></i> TradingView</a></li>
-                                                    <li><a class="dropdown-item" href="{{ url_for('analysis.recommendation') }}"><i class="fas fa-star"></i> Anbefalinger</a></li>
+                                                    <li><a class="dropdown-item" href="{{ url_for('analysis.recommendations') }}"><i class="fas fa-star"></i> Anbefalinger</a></li>
                                                 </ul>
                                             </li>
                                             <li class="nav-item dropdown">
